fix spacing inconsistency

--- a/styles.css
+++ b/styles.css
@@ -311,7 +311,6 @@ button {
 }
 
 .screen-disclaimer {
-    margin-top: 1rem;
     font-size: .75rem;
 
     & p {
